# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "repeat"
version = "0.2.0"
edition = "2024"


[dependencies]
clap = { version = "4", features = ["derive"] }
execute = { version = "0" }
create_process_w = { version = "0", package = "CreateProcessW" }
wintrap = "0.3.1"
